Fixings on firefox footer

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -32,7 +32,6 @@ header
 
   & button.button
     text-indent 0
-    border 1px solid #737476
     border-radius(5px)
     display inline-block
     font-weight bold
@@ -48,7 +47,7 @@ header
 
 footer div button
   width 100%
-  height 100%
+  height inherit
 
   & .counter
     position relative
