--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -58,6 +58,7 @@ footer
   height FOOTER_HEIGHT
 
   & > nav
+    width 100%
     display -webkit-box
     display -ms-box
     display -moz-box
